# speed_rock

./: README.md  pyproject.toml
speed_rock/: find_minima.py  load_data.py
tests/: test_load_data.py  test_minima.py
